# stlc

./: .hlint.yaml  CHANGELOG.md  README.md  simply-typed-hs.cabal
app/: Main.hs
data/: currying.stlc  factorial.stlc  math.stlc  multi-param.stlc  not.stlc  scope.stlc  tuples.stlc
src/: Context.hs  Eval.hs  Parser.hs  Primitive.hs  Typecheck.hs  Types.hs  Util.hs
