cabal-version:      2.4
name:               simply-typed-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Micah Cantor
maintainer:         micahcantor01@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Context, Eval, Parser, Types, Typecheck, Util, Primitive
    default-extensions: OverloadedStrings, GeneralisedNewtypeDeriving, FlexibleContexts

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, text, containers, megaparsec, mtl, hashtables, vector
    hs-source-dirs:   src
    default-language: Haskell2010

executable simply-typed-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        simply-typed-hs

    hs-source-dirs:   app
    default-language: Haskell2010
